uz len album dorobit

--- a/semestralka/public/css/app.css
+++ b/semestralka/public/css/app.css
@@ -2765,10 +2765,10 @@ fieldset:disabled a.btn {
 
 .btn-success:focus,
 .btn-success.focus {
-  color: #fff;
+  color: #ff7b1f !important;
   background-color: #2fa360;
-  border-color: #2d995b;
-  box-shadow: 0 0 0 0.2rem rgba(86, 202, 135, 0.5);
+  border-color: #000 !important;
+  box-shadow: 0 0 0 0.2rem #fff !important;
 }
 
 .btn-success.disabled,
@@ -3036,10 +3036,11 @@ fieldset:disabled a.btn {
 .btn-outline-secondary {
   color: #6c757d;
   border-color: #6c757d;
+  background-color: #000 !important;
 }
 
 .btn-outline-secondary:hover {
-  color: #fff;
+  color: #ff7b1f !important;
   background-color: #6c757d;
   border-color: #6c757d;
 }
@@ -4569,7 +4570,7 @@ input[type=button].btn-block {
   font-size: 1.125rem;
   line-height: 1;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 1px solid #fff !important;
   border-radius: 0.25rem;
 }
 
@@ -4942,9 +4943,9 @@ input[type=button].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  background-color: #4e4c4c !important;
+  border: 5px solid !important;
   border-radius: 0.25rem;
 }
 
@@ -5230,13 +5231,13 @@ input[type=button].btn-block {
   margin-left: -1px;
   line-height: 1.25;
   color: #3490dc;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
+  background-color: #3e3b3b !important;
+  border: 1px solid #fff !important;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #1d68a7;
+  color: #ff7b1f !important;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5245,7 +5246,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 0.05rem #fff !important;
 }
 
 .page-item:first-child .page-link {
@@ -5745,7 +5746,7 @@ a.badge-dark.focus {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 0.75rem 1.25rem;
+  padding: 0.5rem 1.0rem !important;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
