--- a/semestralka/public/css/app.css
+++ b/semestralka/public/css/app.css
@@ -68,6 +68,7 @@ section {
 body {
   margin: 0;
   font-family: "Nunito", sans-serif;
+  font-variant: petite-caps !important;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -4944,8 +4945,8 @@ input[type=button].btn-block {
   min-width: 0;
   word-wrap: break-word;
   background-clip: border-box;
-  background-color: #4e4c4c !important;
-  border: 5px solid !important;
+  background-color: black !important;
+  border: 2px solid !important;
   border-radius: 0.25rem;
   padding: 0 !important;
   margin: 10px 0px !important;
@@ -5008,7 +5009,7 @@ input[type=button].btn-block {
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: blanchedalmond !important;
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
